--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -16,22 +16,20 @@
 </nav>
 
 <main class="w-100">
-    <div class="container ps-0 pe-0 pt-5">
+    <div class="container ps-0 pe-0 pt-5 mb-5">
         <div class="row">
             <div class="col-3">
                 <div class="list-group">
                     <a class="list-group-item list-group-item-action"
                         [routerLink]="['/funcionarios']"
                         routerLinkActive="active"
-                        [routerLinkActiveOptions]="{exact: true}"
                         aria-current="true">
                         <i class="bi bi-person-vcard"></i>
                         Funcionários
                     </a>
                     <a class="list-group-item list-group-item-action"
                         [routerLink]="['/usuarios']"
-                        routerLinkActive="active"
-                        [routerLinkActiveOptions]="{exact: true}">
+                        routerLinkActive="active">
                         <i class="bi bi-person-fill"></i>
                         Usuarios
                     </a>
