--- a/src/app/modules/funcionarios/pages/funcionarios-cadastro/funcionarios-cadastro.component.html
+++ b/src/app/modules/funcionarios/pages/funcionarios-cadastro/funcionarios-cadastro.component.html
@@ -1,1 +1,111 @@
-<p>funcionarios-cadastro works!</p>
+<button type="button" (click)="previous()"
+    class="btn d-flex p-0 m-0 justify-content-center align-items-center mb-4" title="Voltar">
+    <i class="bi bi-arrow-left"></i>
+</button>
+
+<div class="d-flex justify-content-between align-items-center mb-4">
+    <h1 class="fs-2">Novo funcionário</h1>
+</div>
+
+<form [formGroup]="form" class="needs-validation" [ngClass]="{'was-validated': form.touched && form.invalid}" [attr.novalidate]="form.touched && form.invalid ? true : null">
+    <row class="mb-3" getFormControl [form]="form" [field]="'nome'" #nomeControl="getFormControl">
+        <app-input
+            [control]="nomeControl.getFormControl()"
+            [label]="'Nome'"
+            [required]="true"
+            id="nome"
+        ></app-input>
+    </row>
+    <div class="mb-3" getFormControl [form]="form" [field]="'email'" #emailControl="getFormControl">
+        <app-input
+            [control]="emailControl.getFormControl()"
+            [label]="'E-mail'"
+            [required]="true"
+            [type]="'email'"
+            id="email"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'celular'" #celularControl="getFormControl">
+        <app-input
+            [control]="celularControl.getFormControl()"
+            [label]="'Celular'"
+            [required]="true"
+            [type]="'text'"
+            [mask]="'(00) 0.0000-0000'"
+            id="celular"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'ativo'" #ativoControl="getFormControl">
+        <app-select
+            [control]="ativoControl.getFormControl()"
+            [label]="'Ativo'"
+            [required]="true"
+            [options]="ativoOptions"
+            id="ativo"
+        ></app-select>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'ramal'" #ramalControl="getFormControl">
+        <app-input
+            [control]="ramalControl.getFormControl()"
+            [label]="'Ramal'"
+            [type]="'text'"
+            [mask]="'0000-0000'"
+            id="ramal"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'bairro'" #bairroControl="getFormControl">
+        <app-input
+            [control]="bairroControl.getFormControl()"
+            [label]="'Bairro'"
+            [required]="true"
+            [type]="'text'"
+            id="bairro"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'complemento'" #complementoControl="getFormControl">
+        <app-input
+            [control]="complementoControl.getFormControl()"
+            [label]="'Complemento'"
+            [type]="'text'"
+            id="complemento"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'logradouro'" #logradouroControl="getFormControl">
+        <app-input
+            [control]="logradouroControl.getFormControl()"
+            [label]="'Logradouro'"
+            [type]="'text'"
+            id="logradouro"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'numero'" #numeroControl="getFormControl">
+        <app-input
+            [control]="numeroControl.getFormControl()"
+            [label]="'Número'"
+            [type]="'number'"
+            id="numero"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'cidade'" #cidadeControl="getFormControl">
+        <app-input
+            [control]="cidadeControl.getFormControl()"
+            [label]="'Cidade'"
+            [required]="true"
+            [type]="'text'"
+            id="cidade"
+        ></app-input>
+    </div>
+    <div class="mb-3" getFormControl [form]="form" [field]="'estado'" #estadoControl="getFormControl">
+        <app-select
+            [control]="estadoControl.getFormControl()"
+            [label]="'Estado'"
+            [required]="true"
+            [options]="estados"
+            id="estado"
+        ></app-select>
+    </div>
+    <div class="d-flex column-gap-3 justify-content-start align-items-center mt-4">
+        <button type="submit" class="btn btn-danger ps-4 pe-4" (click)="previous()">Cancelar</button>
+        <button type="submit" class="btn btn-success ps-4 pe-4" [disabled]="form.invalid">Cadastrar</button>
+    </div>
+</form>
