--- a/src/app/modules/autenticacao/pages/login/login.component.html
+++ b/src/app/modules/autenticacao/pages/login/login.component.html
@@ -3,16 +3,25 @@
         <h1 class="fs-1 mb-0">Login</h1>
         <p>Bem vindo(a)! Por favor, faça o login com a sua conta.</p>
     </div>
-    <form class="w-100 mb-4">
-        <div class="mb-4">
-            <label for="email" class="form-label">E-mail</label>
-            <input type="email" class="form-control" id="email" placeholder="Digite seu email">
+    <form [formGroup]="form" class="w-100 mb-4 needs-validation" [ngClass]="{'was-validated': form.touched && form.invalid}" [attr.novalidate]="form.touched && form.invalid ? true : null">
+        <div class="mb-4" getFormControl [form]="form" [field]="'username'" #usernameControl="getFormControl">
+            <app-input
+                [control]="usernameControl.getFormControl()"
+                [label]="'Usuário'"
+                [required]="true"
+                id="username"
+            ></app-input>
         </div>
-        <div class="mb-4">
-            <label for="senha" class="form-label">Senha</label>
-            <input type="password" class="form-control" id="senha" placeholder="Digite sua senha">
+        <div class="mb-4" getFormControl [form]="form" [field]="'password'" #passwordControl="getFormControl">
+            <app-input
+                [control]="passwordControl.getFormControl()"
+                [label]="'Senha'"
+                [required]="true"
+                [type]="'password'"
+                id="password"
+            ></app-input>
         </div>
-        <button type="submit" class="btn btn-primary w-100 mt-2">Entrar</button>
+        <button type="submit" class="btn btn-primary w-100 mt-2" [disabled]="form.invalid">Entrar</button>
     </form>
     <div class="w-100 d-flex flex-column row-gap-3">
         <p class="mb-0">Não tem uma conta? <a [routerLink]="['/auth/cadastro']">Cadastre-se</a></p>
