feat(pages): Adjusts

--- a/src/app/modules/autenticacao/pages/cadastro-usuario/cadastro-usuario.component.html
+++ b/src/app/modules/autenticacao/pages/cadastro-usuario/cadastro-usuario.component.html
@@ -1,4 +1,4 @@
-<div class="container ps-4 pe-4 pe-lg-5 ps-lg-5 d-flex flex-column justify-content-center h-100 row-gap-4">
+<div class="container ps-4 pe-4 pe-lg-5 ps-lg-5 d-flex flex-column justify-content-center h-100 row-gap-4 animate__animated animate__fadeIn">
     <div class="w-100 d-flex flex-column align-items-start row-gap-3">
         <button type="button" (click)="previous()"
             class="btn d-flex p-0 m-0 justify-content-center align-items-center mb-4" title="Voltar">
@@ -51,6 +51,6 @@
                 id="password"
             ></app-input>
         </div>
-        <button type="submit" class="btn btn-primary w-100 mt-2" [disabled]="form.invalid">Cadastrar</button>
+        <button type="submit" class="btn btn-primary w-100 mt-2" [disabled]="form.invalid" (click)="submit()">Cadastrar</button>
     </form>
 </div>
