--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -8,7 +8,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end align-items-center column-gap-4" id="navbarScroll">
-            <button class="btn border-0 pe-0 me-0 ps-0 me-0" type="button" (click)="toGoAdmin()" title="Sair">
+            <button class="btn border-0 pe-0 me-0 ps-0 me-0" type="button" (click)="logout()" title="Sair">
                 <i class="bi bi-box-arrow-right fs-5"></i>
             </button>
         </div>
