--- a/src/app/modules/autenticacao/pages/login/login.component.html
+++ b/src/app/modules/autenticacao/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container ps-4 pe-4 pe-lg-5 ps-lg-5 d-flex flex-column justify-content-center h-100 row-gap-4">
+<div class="container ps-4 pe-4 pe-lg-5 ps-lg-5 d-flex flex-column justify-content-center h-100 row-gap-4 animate__animated animate__fadeIn">
     <div class="w-100 d-flex flex-column row-gap-3">
         <h1 class="fs-1 mb-0">Login</h1>
         <p>Bem vindo(a)! Por favor, faça o login com a sua conta.</p>
@@ -21,7 +21,7 @@
                 id="password"
             ></app-input>
         </div>
-        <button type="submit" class="btn btn-primary w-100 mt-2" [disabled]="form.invalid">Entrar</button>
+        <button type="submit" class="btn btn-primary w-100 mt-2" [disabled]="form.invalid" (click)="login()">Entrar</button>
     </form>
     <div class="w-100 d-flex flex-column row-gap-3">
         <p class="mb-0">Não tem uma conta? <a [routerLink]="['/auth/cadastro']">Cadastre-se</a></p>
