feat(project): Finished development

--- a/src/assets/scss/_navbar.scss
+++ b/src/assets/scss/_navbar.scss
@@ -1,4 +1,6 @@
+@import './variables';
+
 .bg-navbar-dark {
-    background-color: #01071d;
-    color: #fff;
+    background-color: $color-blue;
+    color: $color-white;
 }
