--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-navbar-dark position-relative sticky-top shadow-lg" data-bs-theme="dark">
     <div class="container p-2 ps-lg-0 pe-lg-0">
-        <a class="navbar-brand fs-4" [routerLink]="['/funcionarios']">
+        <a class="navbar-brand fs-4" [routerLink]="['/']">
             <img src="/assets/img/logo.svg" alt="Ludfor" class="img-fluid" width="150">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
@@ -17,25 +17,8 @@
 
 <main class="w-100">
     <div class="container ps-0 pe-0 pt-5 mb-5">
-        <div class="row">
-            <div class="col-3">
-                <div class="list-group">
-                    <a class="list-group-item list-group-item-action"
-                        [routerLink]="['/funcionarios']"
-                        routerLinkActive="active"
-                        aria-current="true">
-                        <i class="bi bi-person-vcard"></i>
-                        Funcionários
-                    </a>
-                    <a class="list-group-item list-group-item-action"
-                        [routerLink]="['/usuarios']"
-                        routerLinkActive="active">
-                        <i class="bi bi-person-fill"></i>
-                        Usuarios
-                    </a>
-                </div>
-            </div>
-            <div class="col-9">
+        <div class="row p-0 m-0">
+            <div class="col-12">
                 <router-outlet></router-outlet>
             </div>
         </div>
