--- a/src/app/modules/funcionarios/pages/funcionarios-cadastro/funcionarios-cadastro.component.html
+++ b/src/app/modules/funcionarios/pages/funcionarios-cadastro/funcionarios-cadastro.component.html
@@ -106,8 +106,7 @@
             ></app-select>
         </div>
         <div class="d-flex column-gap-3 justify-content-start align-items-center mt-4">
-            <button type="submit" class="btn btn-danger ps-4 pe-4" (click)="previous()">Cancelar</button>
-            <button type="submit" class="btn btn-success ps-4 pe-4" [disabled]="form.invalid" (click)="submit()">{{ id ? 'Atualizar' : 'Cadastrar' }}</button>
+            <button type="submit" class="btn btn-success ps-4 pe-4 w-mobile-100" [disabled]="form.invalid" (click)="submit()">{{ id ? 'Atualizar' : 'Cadastrar' }}</button>
         </div>
     </form>
 </main>
