--- a/src/assets/scss/_form.scss
+++ b/src/assets/scss/_form.scss
@@ -1,6 +1,8 @@
+@import './variables';
+
 .ng-input,
 .form-control {
     &.ng-invalid.ng-touched:not(form) {
-        border: 1px solid red;
+        border: 1px solid $color-red;
     }
 }
